--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					<div class="skill-item">
 						<div class="skill-info clearfix">
 							<h6 class="float-left mb-3 mt-0">Big Data Tools</h6>
-							<h4 class="float-left mb-1 mt-0">Hadoop, Spark, Scala, Hive, Nosql, Sqoop, Hbase </h4>
+							<h4 class="float-left mb-1 mt-0">Hadoop, Spark, Scala, Hive, Mysql, Nosql, Sqoop, Hbase, Kafka, Airflow </h4>
 							<span class="float-right">80%</span>
 						</div>
 						<div class="progress">
@@ -177,7 +177,38 @@
 						<div class="spacer" data-height="50"></div>
 					</div>
 				</div>
-			
+			    <div class="col-md-6">
+					<!-- skill item -->
+					<div class="skill-item">
+						<div class="skill-info clearfix">
+							<h6 class="float-left mb-3 mt-0"> Data Visualisation</h6>
+							<br><br>
+							<h4 class="float-left mb-1 mt-0"> Power Bi, Excel </h4>
+							<span class="float-right">80%</span>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="90">
+							</div>
+						</div>
+						<div class="spacer" data-height="50"></div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<!-- skill item -->
+					<div class="skill-item">
+						<div class="skill-info clearfix">
+							<h6 class="float-left mb-3 mt-0"> Devops</h6>
+							<br><br>
+							<h4 class="float-left mb-1 mt-0"> Docker, Jenkins, Git, Github, Gitlab, Ansible, AWS Devops </h4>
+							<span class="float-right">80%</span>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="90">
+							</div>
+						</div>
+						<div class="spacer" data-height="50"></div>
+					</div>
+				</div>
 				<div class="col-md-6">
 					<!-- skill item -->
 					<div class="skill-item">
