--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 							<p class="mb-0">Email: <span class="text-dark">akshayanandraokadam@gmail.com</span></p>
 						</div>
 					</div>
-					<a href="https://drive.google.com/file/d/1AmfwB0kS2wKTZwh6gotVR7Gnb2iV5XmD/view?usp=sharing" class="btn btn-default mr-3"><i class="icon-cloud-download"></i>Download CV</a>
+					<a href="resume/CV-AKSHAY_KADAM_2024.pdf" class="btn btn-default mr-3"><i class="icon-cloud-download"></i>Download CV</a>
 				</div>
 			</div>
 		</section>
