--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-< lang="en-US">
+<html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Akshay Kadam - Data Engineer</title>
@@ -268,7 +268,7 @@
 							<span>Dec 2019 - Feb 2023</span>
 						</div>
 						<div class="body">
-							<h4 class="mt-0" style="color: #28a745;">Xoriant.</h4>
+							<h4 class="mt-0" style="color: #28a745;">Intelsoft.</h4>
 							<h6 class="mt-0">Data Engineer</h6>
 							<p>• Experience in Analysing & validating the completeness of business
 								requirements. Responsible to merge data coming from different sources and
